--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
             <version>5.6.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok-maven-plugin</artifactId>
+            <version>1.18.12.0</version>
+            <type>maven-plugin</type>
+        </dependency>
     </dependencies>
 
     <build>
